--- a/app/src/main/res/layout/activity_main_menu_details.xml
+++ b/app/src/main/res/layout/activity_main_menu_details.xml
@@ -18,8 +18,7 @@
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
-        android:layout_below="@+id/detailTitle"
-        android:layout_above="@+id/footer">
+        android:layout_below="@+id/detailTitle">
 
     </ListView>
     
