--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    
-  
-    
-    
-      <fragment
+
+    <fragment
           android:id="@+id/folder"
           android:name="com.mendeleypaperreader.activities.MainMenuFragmentList"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="#27a1b4"
           tools:layout="@layout/activity_main_menu_list" />
-    
-    
-</LinearLayout>
+
+
+    <include
+        android:id="@+id/progress_bar"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        layout="@layout/progress_bar"
+        android:layout_alignParentBottom="true"/>
+
+
+
+</RelativeLayout>
