--- a/app/src/main/res/menu/main_menu_activity_actions.xml
+++ b/app/src/main/res/menu/main_menu_activity_actions.xml
@@ -2,7 +2,7 @@
 
 
     <item
-        android:id="@+id/grid_default_search"
+        android:id="@+id/main_grid_default_search"
         android:icon="@android:drawable/ic_menu_search"
         android:title="@string/menu_search"
         android:showAsAction="always"
@@ -11,7 +11,7 @@
     </item>
 
 
-    <item android:id="@+id/menu_refresh"
+    <item android:id="@+id/main_menu_refresh"
         android:icon="@drawable/ic_action_refresh"
         android:showAsAction="always"
         android:title="@string/menu_refresh"/>
