--- a/app/src/main/res/layout-land/activity_main_menu.xml
+++ b/app/src/main/res/layout-land/activity_main_menu.xml
@@ -8,10 +8,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-         
-     
-     <fragment
+
+
+        <fragment
          android:id="@+id/folders"
          android:layout_width="210dp"
          android:layout_height="match_parent"
@@ -26,7 +25,22 @@
            android:layout_toRightOf="@+id/folders" >
 
        </FrameLayout>
-       
-       </RelativeLayout>
+
+        <include
+            android:id="@+id/progress_bar_land"
+            layout="@layout/progress_bar"
+            style="@style/NumberProgressBar_Beauty_Red"
+            android:layout_width="146dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+    </RelativeLayout>
+
+
+
 
 </LinearLayout>
