--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -87,7 +87,16 @@
                 android:textStyle="italic"
                 android:layout_above="@+id/about_email_value" />
 
-        </RelativeLayout>
-    
+        <include
+            android:id="@+id/progress_bar"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            layout="@layout/progress_bar"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
