--- a/app/src/main/res/layout/activity_abstract_description.xml
+++ b/app/src/main/res/layout/activity_abstract_description.xml
@@ -1,9 +1,22 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
+
+<ScrollView
     android:id="@+id/scrollView1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
-    
-    <TextView 
+
+    <TextView
     android:id="@+id/abstract_description"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -11,3 +24,16 @@
     android:padding="@dimen/pading" />
 
 </ScrollView>
+
+    </RelativeLayout>
+
+    <include
+        android:id="@+id/progress_bar"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        layout="@layout/progress_bar"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+</RelativeLayout>
