--- a/app/src/main/res/menu/action_bar_search.xml
+++ b/app/src/main/res/menu/action_bar_search.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/grid_default_search"
+        android:id="@+id/frag_grid_default_search"
         android:icon="@android:drawable/ic_menu_search"
         android:title="search"
         android:showAsAction="always"
@@ -12,7 +12,7 @@
 
     <item
         android:title="@string/menu_refresh"
-        android:id="@+id/menu_refresh"
+        android:id="@+id/frag_menu_refresh"
         android:icon="@drawable/ic_action_refresh"
         android:showAsAction="ifRoom|never">
     </item>
