--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -9,7 +9,7 @@
 
     <fragment
           android:id="@+id/folder"
-          android:name="com.mendeleypaperreader.activities.MainMenuFragmentList"
+          android:name="com.mendeleypaperreader.fragments.FragmentList"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="#27a1b4"
