--- a/app/src/main/res/layout/progress_bar.xml
+++ b/app/src/main/res/layout/progress_bar.xml
@@ -3,4 +3,5 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:visibility="gone"/>
+    android:visibility="gone"
+    style="@style/NumberProgressBar_Warning_Red"/>
