--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -7,6 +7,7 @@
     <color name="list_header">#5C6BC0</color>
     <color name="actionBar">#3F51B5</color>
     <color name="actionBarTextColor">#E0E0E0</color>
+    <color name="red">#E53935</color>
 
 
 
